2010-03-30  Andreia Gaita  <avidigal@novell.com>

	* various.m4: move curl checks to curl.m4
	* curl.m4: add support for --with-curl=no|embedded|system options
	* ax_file_escapes.m4, m4/ax_print_to_file.m4: helper files for
	CUSTOM_SUBDIR_OPTION

2010-02-26  Andreia Gaita  <avidigal@novell.com>

	* various.m4: Add curl checks and --with-curl flag to
	activate building the curl bridge

2010-02-17  Andreia Gaita  <avidigal@novell.com>

	* mozilla.m4: Fix firefox flags, for they are borked

2010-01-28  Andreia Gaita  <avidigal@novell.com>

	* mozilla.m4: Add Firefox 3.6 support

2009-12-08  Chris Toshok  <toshok@ximian.com>

	* build-configuration.m4: add --enable-sdk (defaults to yes) so
	people can disable the monodevelop sdk installation.

2009-10-07  Rusty Howell  <rhowell@novell.com>

	 * mozilla.m4: Reverting MAX_FIREFOX_VERSION back to 3.5.* due to FF 3.6
	deprecating XPCOM and migrating to npruntime
	See: http://lists.ximian.com/pipermail/moonlight-list/2009-October/000627.html

2009-07-30  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* mozilla.m4: Bump MAX_FIREFOX_VERSION to make it work with
	Firefox trunk. See 
	http://lists.ximian.com/pipermail/moonlight-list/2009-June/000504.html

2009-06-02  Rusty Howell  <rhowell@novell.com>

	 * examples.m4: Added to be able to disable building the examples

2009-05-06  Raja R Harinath  <harinath@hurrynot.org>

	* mono.m4 (mcspath): Use $(srcdir) to refer to mcs/.
	(mono_basic_path): Likewise for mono-basic/.
	Use AC_MSG_WARN instead of AC_WARNING.

2009-05-02  Andreia Gaita  <avidigal@novell.com>

	* unwind.m4: Only add unwind libs if building in debug mode

2009-04-29  Andreia Gaita  <avidigal@novell.com>

	* unwind.m4: Add libunwind checks

2009-04-23  Aaron Bockover  <abock@gnome.org>

	* firefox-xpi.m4:

2009-04-23  Aaron Bockover  <abockover@novell.com>

	* firefox-xpi.m4: Fix regression that allows building without
	any browser support

2009-04-22  Rusty Howell   <rhowell@novell.com>
